--- a/app/Resources/views/admin/fields/tab_listitems.html.twig
+++ b/app/Resources/views/admin/fields/tab_listitems.html.twig
@@ -1,19 +1,15 @@
-<div class="grid-row">
-    <div class="grid-100">
-        <button type="button" id="listitem-create" onclick="ListItemsApp.create({{ field.id }})">{{ 'button.create'|trans }}</button>
-        <button type="button" id="listitem-edit" onclick="ListItemsApp.edit({{ field.id }})" disabled>{{ 'button.edit'|trans }}</button>
-        <button type="button" id="listitem-delete" onclick="ListItemsApp.delete({{ field.id }})" disabled>{{ 'button.delete'|trans }}</button>
-    </div>
+<div class="grid-100 grid-row">
+    <button type="button" id="listitem-create" onclick="ListItemsApp.create({{ field.id }})">{{ 'button.create'|trans }}</button>
+    <button type="button" id="listitem-edit" onclick="ListItemsApp.edit({{ field.id }})" disabled>{{ 'button.edit'|trans }}</button>
+    <button type="button" id="listitem-delete" onclick="ListItemsApp.delete({{ field.id }})" disabled>{{ 'button.delete'|trans }}</button>
 </div>
 
-<div class="grid-row">
-    <div class="grid-100">
-        <fieldset>
-            <select id="listitems" onchange="ListItemsApp.onSelect()" size="20" title="{{ 'listitems'|trans }}" class="grid-100 mobile-grid-100">
-                {% for item in field.asList.items %}
-                    <option value="{{ item.value }}">[{{ item.value }}] {{ item.text }}</option>
-                {% endfor %}
-            </select>
-        </fieldset>
-    </div>
+<div class="grid-100 grid-row">
+    <fieldset>
+        <select id="listitems" onchange="ListItemsApp.onSelect()" size="20" title="{{ 'listitems'|trans }}" class="grid-100 mobile-grid-100">
+            {% for item in field.asList.items %}
+                <option value="{{ item.value }}">[{{ item.value }}] {{ item.text }}</option>
+            {% endfor %}
+        </select>
+    </fieldset>
 </div>
