--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -4,7 +4,7 @@
 {% endblock form_start %}
 
 {% block form_row %}
-    <div class="grid-container grid-parent grid-row">
+    <div class="grid-row clearfix">
         {# Checkboxes have a different layout to render #}
         {% if checked is defined %}
             <div class="grid-66 prefix-33">
