--- a/app/Resources/views/web/settings/index.html.twig
+++ b/app/Resources/views/web/settings/index.html.twig
@@ -16,10 +16,8 @@
                 {{ form_row(appearance_form.theme) }}
                 {{ form_row(appearance_form.timezone) }}
 
-                <div class="grid-container grid-parent grid-row">
-                    <div class="grid-66 prefix-33">
-                        <input type="submit" value="{{ 'button.save'|trans }}">
-                    </div>
+                <div class="grid-66 prefix-33 grid-row">
+                    <input type="submit" value="{{ 'button.save'|trans }}">
                 </div>
 
             </fieldset>
@@ -37,10 +35,8 @@
                 {{ form_row(password_form.new_password) }}
                 {{ form_row(password_form.confirmation) }}
 
-                <div class="grid-container grid-parent grid-row">
-                    <div class="grid-66 prefix-33">
-                        <input type="submit" value="{{ 'user.change_password'|trans }}">
-                    </div>
+                <div class="grid-66 prefix-33 grid-row">
+                    <input type="submit" value="{{ 'user.change_password'|trans }}">
                 </div>
 
             </fieldset>
