--- a/app/Resources/public/less/themes/theme-nexada.less
+++ b/app/Resources/public/less/themes/theme-nexada.less
@@ -31,11 +31,18 @@ p a {
 
 /* Input controls */
 
-fieldset.private {
-    border-color: #dc322f;
+.fieldset {
 
-    legend {
-        color: #dc322f;
+    .legend {
+        background-color: #fbfbfb;
+    }
+
+    &.private {
+        border-color: #dc322f;
+
+        .legend {
+            color: #dc322f;
+        }
     }
 }
 
