--- a/app/Resources/views/admin/groups/tab_members.html.twig
+++ b/app/Resources/views/admin/groups/tab_members.html.twig
@@ -1,4 +1,4 @@
-<div class="flex-container grid-container grid-parent grid-row">
+<div class="flex-container grid-row clearfix">
 
     <div class="grid-45">
         <fieldset>
@@ -12,11 +12,11 @@
     </div>
 
     <div class="grid-10 text-center">
-        <button type="button" class="grid-row grid-100" onclick="GroupsApp.addUsers({{ group.id }})">
+        <button type="button" class="grid-100 grid-row" onclick="GroupsApp.addUsers({{ group.id }})">
             <span class="hide-on-mobile fa fa-arrow-right"></span>
             <span class="hide-on-desktop fa fa-arrow-down"></span>
         </button>
-        <button type="button" class="grid-row grid-100" onclick="GroupsApp.removeUsers({{ group.id }})">
+        <button type="button" class="grid-100 grid-row" onclick="GroupsApp.removeUsers({{ group.id }})">
             <span class="hide-on-mobile fa fa-arrow-left"></span>
             <span class="hide-on-desktop fa fa-arrow-up"></span>
         </button>
