--- a/app/Resources/views/web/records/index.html.twig
+++ b/app/Resources/views/web/records/index.html.twig
@@ -2,43 +2,39 @@
 
 {% block content %}
 
-    <div class="grid-row">
-        <div class="grid-100">
-            <span class="buttonset">
-                <button type="button" id="btn-read" onclick="RecordsApp.read()" disabled="disabled">{{ 'button.mark_as_read'|trans }}</button>
-                <button type="button" id="btn-unread" onclick="RecordsApp.unread()" disabled="disabled">{{ 'button.mark_as_unread'|trans }}</button>
-            </span>
-            <button type="button" onclick="RecordsApp.export()">{{ 'button.export'|trans }}</button>
-        </div>
+    <div class="grid-100 grid-row">
+        <span class="buttonset">
+            <button type="button" id="btn-read" onclick="RecordsApp.read()" disabled="disabled">{{ 'button.mark_as_read'|trans }}</button>
+            <button type="button" id="btn-unread" onclick="RecordsApp.unread()" disabled="disabled">{{ 'button.mark_as_unread'|trans }}</button>
+        </span>
+        <button type="button" onclick="RecordsApp.export()">{{ 'button.export'|trans }}</button>
     </div>
 
-    <div class="grid-row">
-        <div class="grid-100">
-            <table id="records" class="cell-border hover" data-src="{{ path('web_records_list') }}">
-                <thead>
-                    <tr>
-                        <th>{{ 'record.id'|trans }}</th>
-                        <th>{{ 'project'|trans }}</th>
-                        <th>{{ 'state'|trans }}</th>
-                        <th>{{ 'record.subject'|trans }}</th>
-                        <th>{{ 'role.author'|trans }}</th>
-                        <th>{{ 'role.responsible'|trans }}</th>
-                        <th>{{ 'record.age'|trans }}</th>
-                    </tr>
-                </thead>
-                <tfoot>
-                    <tr>
-                        <td><input type="text" title="{{ 'record.id'|trans }}"></td>
-                        <td><input type="text" title="{{ 'project'|trans }}"></td>
-                        <td><input type="text" title="{{ 'state'|trans }}"></td>
-                        <td><input type="text" title="{{ 'record.subject'|trans }}"></td>
-                        <td><input type="text" title="{{ 'role.author'|trans }}"></td>
-                        <td><input type="text" title="{{ 'role.responsible'|trans }}"></td>
-                        <td><input type="text" title="{{ 'record.age'|trans }}"></td>
-                    </tr>
-                </tfoot>
-            </table>
-        </div>
+    <div class="grid-100 grid-row">
+        <table id="records" class="cell-border hover" data-src="{{ path('web_records_list') }}">
+            <thead>
+                <tr>
+                    <th>{{ 'record.id'|trans }}</th>
+                    <th>{{ 'project'|trans }}</th>
+                    <th>{{ 'state'|trans }}</th>
+                    <th>{{ 'record.subject'|trans }}</th>
+                    <th>{{ 'role.author'|trans }}</th>
+                    <th>{{ 'role.responsible'|trans }}</th>
+                    <th>{{ 'record.age'|trans }}</th>
+                </tr>
+            </thead>
+            <tfoot>
+                <tr>
+                    <td><input type="text" title="{{ 'record.id'|trans }}"></td>
+                    <td><input type="text" title="{{ 'project'|trans }}"></td>
+                    <td><input type="text" title="{{ 'state'|trans }}"></td>
+                    <td><input type="text" title="{{ 'record.subject'|trans }}"></td>
+                    <td><input type="text" title="{{ 'role.author'|trans }}"></td>
+                    <td><input type="text" title="{{ 'role.responsible'|trans }}"></td>
+                    <td><input type="text" title="{{ 'record.age'|trans }}"></td>
+                </tr>
+            </tfoot>
+        </table>
     </div>
 
 {% endblock %}
