--- a/app/Resources/views/web/security/login.html.twig
+++ b/app/Resources/views/web/security/login.html.twig
@@ -2,49 +2,47 @@
 
 {% block content %}
 
-    <div class="grid-row">
-        <div class="grid-50 prefix-25 mobile-grid-100">
+    <div class="grid-50 prefix-25 mobile-grid-100 grid-row clearfix">
 
-            <form action="{{ path('login_check') }}" method="post">
-                <fieldset>
-                    <legend>{{ 'security.log_in'|trans }}</legend>
+        <form action="{{ path('login_check') }}" method="post">
+            <fieldset>
+                <legend>{{ 'security.log_in'|trans }}</legend>
 
-                    <div class="grid-container grid-parent grid-row">
-                        <div class="grid-33">
-                            <label for="username">{{ 'user.username'|trans }}:</label>
-                        </div>
-                        <div class="grid-66">
-                            <input class="grid-100 mobile-grid-100" type="text" id="username" name="_username" placeholder="{{ 'field.required'|trans }}" value="{{ last_username }}">
-                        </div>
+                <div class="grid-row clearfix">
+                    <div class="grid-33">
+                        <label for="username">{{ 'user.username'|trans }}:</label>
                     </div>
-
-                    <div class="grid-container grid-parent grid-row">
-                        <div class="grid-33">
-                            <label for="password">{{ 'user.password'|trans }}:</label>
-                        </div>
-                        <div class="grid-66">
-                            <input class="grid-100 mobile-grid-100" type="password" id="password" name="_password" placeholder="{{ 'field.required'|trans }}">
-                        </div>
+                    <div class="grid-66">
+                        <input class="grid-100 mobile-grid-100" type="text" id="username" name="_username" placeholder="{{ 'field.required'|trans }}" value="{{ last_username }}">
                     </div>
+                </div>
 
-                    <div class="grid-container grid-parent grid-row">
-                        <div class="grid-66 prefix-33">
-                            <input type="checkbox" id="remember_me" name="_remember_me">
-                            <label for="remember_me">{{ 'security.remember_me'|trans }}</label>
-                        </div>
+                <div class="grid-row clearfix">
+                    <div class="grid-33">
+                        <label for="password">{{ 'user.password'|trans }}:</label>
                     </div>
-
-                    <div class="grid-container grid-parent grid-row">
-                        <div class="grid-66 prefix-33">
-                            <input type="submit" value="{{ 'security.log_in'|trans }}">
-                            <a class="right" href="{{ path('forgot_password') }}">{{ 'security.forgot_password'|trans }}</a>
-                        </div>
+                    <div class="grid-66">
+                        <input class="grid-100 mobile-grid-100" type="password" id="password" name="_password" placeholder="{{ 'field.required'|trans }}">
                     </div>
+                </div>
 
-                </fieldset>
-            </form>
+                <div class="grid-row clearfix">
+                    <div class="grid-66 prefix-33">
+                        <input type="checkbox" id="remember_me" name="_remember_me">
+                        <label for="remember_me">{{ 'security.remember_me'|trans }}</label>
+                    </div>
+                </div>
 
-        </div>
+                <div class="grid-row clearfix">
+                    <div class="grid-66 prefix-33">
+                        <input type="submit" value="{{ 'security.log_in'|trans }}">
+                        <a class="right" href="{{ path('forgot_password') }}">{{ 'security.forgot_password'|trans }}</a>
+                    </div>
+                </div>
+
+            </fieldset>
+        </form>
+
     </div>
 
 {% endblock %}
